--- a/instant-search/public/manifest.json
+++ b/instant-search/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Instant search",
+  "name": "Instant search with Algolia",
   "icons": [
     {
       "src": "favicon.ico",
